# PyPassManager

./: 57b_passwords.pypass  98a_passwords.pypass  9c0_passwords.pypass  NEWf04_passwords.pypass  c6d_passwords.pypass  constants.py  crypto.py  d28_passwords.pypass  da6_passwords.pypass  f04_passwords.pypass  main.py  password_class.py  pickle zip example.py  pyproject.toml  save file example.py  xor encrypt example.py
