[tool.poetry]
name = "pypassmanager"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
stringdist = "^1.0.9"
mnemonicode = "^1.4.5"
pycryptodome = "^3.9.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
